# roq-risk-manager

./: CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: .gitignore  CMakeLists.txt
conda/: build.sh  meta.yaml
scripts/: create_conda_env.sh
share/: config.toml
src/: CMakeLists.txt
src/roq/: CMakeLists.txt
src/roq/risk_manager/: .gitignore  CMakeLists.txt  README.md  account.cpp  account.hpp  application.cpp  application.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  instrument.cpp  instrument.hpp  limit.hpp  main.cpp  position.cpp  position.hpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  test.sh  test_ws.py  user.cpp  user.hpp
src/roq/risk_manager/benchmark/: CMakeLists.txt
src/roq/risk_manager/config/: risk.toml
src/roq/risk_manager/control/: CMakeLists.txt  README.md  manager.cpp  manager.hpp  response.cpp  response.hpp  session.cpp  session.hpp  shared.cpp  shared.hpp
src/roq/risk_manager/database/: CMakeLists.txt  account.hpp  callback.hpp  compress.hpp  correction.hpp  factory.cpp  factory.hpp  funds.hpp  position.hpp  session.cpp  session.hpp  sqlite.cpp  sqlite.hpp  trade.hpp  type.hpp
src/roq/risk_manager/database/clickhouse/: CMakeLists.txt  session.cpp  session.hpp
src/roq/risk_manager/database/mongo/: CMakeLists.txt  session.cpp  session.hpp
src/roq/risk_manager/database/sqlite/: CMakeLists.txt  funds.cpp  funds.hpp  session.cpp  session.hpp  trades.cpp  trades.hpp
src/roq/risk_manager/flags/: .gitignore  CMakeLists.txt  flags.json
src/roq/risk_manager/rest/: CMakeLists.txt  session.cpp  session.hpp
src/roq/risk_manager/risk/: CMakeLists.txt  account.cpp  account.hpp  instrument.cpp  instrument.hpp  limit.hpp  position.cpp  position.hpp  strategy.cpp  strategy.hpp  user.cpp  user.hpp
src/roq/risk_manager/test/: .gitignore  fix_new_order_single.cpp
src/simple/: .gitignore  CMakeLists.txt  README.md  account.cpp  account.hpp  application.cpp  application.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  error.cpp  error.hpp  instrument.cpp  instrument.hpp  limit.hpp  main.cpp  position.cpp  position.hpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  strategy.cpp  strategy.hpp  test.sh  test_ws.py  user.cpp  user.hpp
src/simple/config/: risk.toml
src/simple/fix/: CMakeLists.txt  session.cpp  session.hpp
src/simple/flags/: .gitignore  CMakeLists.txt  flags.cpp  flags.hpp  flags.json
src/simple/json/: CMakeLists.txt  business_message_reject.hpp  execution_report.hpp  response.cpp  response.hpp  session.cpp  session.hpp
test/: .gitignore  CMakeLists.txt
